--- a/index.html
+++ b/index.html
@@ -129,14 +129,14 @@
           </div>
 
           <div class="img_bottom_1">
-            <img class="img_bottom_1_main" src="./Images/Ngozi.png" alt="Boluwatife">
+            <img class="img_bottom_1_main" src="./Images/name.png" alt="Boluwatife">
             <p>"This service completely changed my approach to healthy eating. It's convenient and delicious, I look forward to every meal!"</p>
             <p><b>Boluwatife Gbadamosi</b></p>
             <p class="img_bottom_1_txt">Loyal User</p>
           </div>
 
           <div class="img_bottom_1">
-            <img class="img_bottom_1_main" src="./Images/Ngozi.png" alt="Ojo">
+            <img class="img_bottom_1_main" src="./Images/IMG_1180.jpg" alt="Ojo">
             <p>"I was skeptical at first, but this exceeded my expectations. It keeps me on track with my fitness goals without sacrificing taste."</p>
             <p><b>Ojo Fopefoluwa Dorcas</b></p>
             <p class="img_bottom_1_txt">Fitness Enthusiast</p>
